--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -30,22 +30,29 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      
       - name: Set up Node
         uses: actions/setup-node@v4
-        with:
+        with: # need path if package.json not at repo root
+          cache-dependency-path: cv-website/package-lock.json
           node-version: 20
           cache: 'npm'
+      
       - name: Install dependencies
         run: npm ci
+      
       - name: Build
         run: npm run build
+      
       - name: Setup Pages
         uses: actions/configure-pages@v4
+      
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
           path: './dist'
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
