--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -37,9 +37,12 @@ jobs:
           cache-dependency-path: cv-website/package-lock.json
           node-version: 20
           cache: 'npm'
+
+      - name: Change to Correct Directory
+        run: cd cv-website
       
       - name: Install dependencies
-        run: npm install
+        run: npm ci
       
       - name: Build
         run: npm run build
