not gonna work but we will see what happens

--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -38,6 +38,9 @@ jobs:
           node-version: 20
           cache: 'npm'
 
+      - name: Log Current folder
+        run: ls
+
       - name: Change to Correct Directory
         run: cd cv-website
       
