--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -30,6 +30,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Move into Correct Directory
+        run: cd cv-website
       
       - name: Set up Node
         uses: actions/setup-node@v4
