suggestion from stack overflow

--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Move into Correct Directory
-        run: cd cv-website
+        run: alias proj="cd cv-website" # only happens within the shell, the alias gets around it
       
       - name: Set up Node
         uses: actions/setup-node@v4
