--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -20,6 +20,11 @@ concurrency:
   group: 'pages'
   cancel-in-progress: true
 
+defaults:
+  run:
+    shell: bash
+    working-directory: ./cv-website
+
 jobs:
   # Single deploy job since we're just deploying
   deploy:
