--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -41,7 +41,7 @@ jobs:
         with: # need path if package.json not at repo root
           node-version: 20
           cache: 'npm'
-          # cache-dependency-path: cv-website/package-lock.json
+          cache-dependency-path: cv-website/package-lock.json
       
       - name: Install dependencies
         run: npm ci
