once more before calling it a night

--- a/.github/workflows/github-deploy.yml
+++ b/.github/workflows/github-deploy.yml
@@ -59,7 +59,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload dist folder
-          path: './dist/'
+          path: 'cv-website/dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
