--- a/cv-website/package.json
+++ b/cv-website/package.json
@@ -14,9 +14,12 @@
   "dependencies": {
     "@formspree/react": "^3.0.0",
     "@tailwindcss/vite": "^4.1.0",
+    "@types/react-slick": "^0.23.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.0"
   },
   "devDependencies": {
